# vmmgr

./: .gitignore  README.md  pyproject.toml
src/vmmgr/: cli.py  constants.py  formatters.py  libvirt.py  os.py  types.py  vmmgr.py
tests/: test_libvirt.py  test_os.py  test_vmmgr.py
